force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>agf__Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>