force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Capex_Enabled__c.field-meta.xml
<CustomField>
    <fullName>agf__Capex_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This team can mark User Stories and Tasks as Capital Expenditures</description>
    <inlineHelpText>This team can mark User Stories and Tasks as Capital Expenditures</inlineHelpText>
    <label>Capitalizable</label>
    <type>Checkbox</type>
</CustomField>