force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Capex_Lead__c.field-meta.xml
<CustomField>
    <fullName>agf__Capex_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capitalization Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capex_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>