force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Cloud_LU__c.field-meta.xml
<CustomField>
    <fullName>agf__Cloud_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud</label>
    <referenceTo>agf__ADM_Cloud__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>