force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Colocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Colocation__c</fullName>
    <label>Colocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>