force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Copy_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Copy_Record_Type_Name__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Copy Record Type Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>