force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Definition_of_Done__c.field-meta.xml
<CustomField>
    <fullName>agf__Definition_of_Done__c</fullName>
    <label>Definition of Done</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>