force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Definition_of_Done_Check__c.field-meta.xml
<CustomField>
    <fullName>agf__Definition_of_Done_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Definition of Done Check</label>
    <type>Checkbox</type>
</CustomField>