force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Distribution_Lists__c.field-meta.xml
<CustomField>
    <fullName>agf__Distribution_Lists__c</fullName>
    <label>Distribution Lists</label>
    <type>TextArea</type>
</CustomField>