force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Division__c.field-meta.xml
<CustomField>
    <fullName>agf__Division__c</fullName>
    <inlineHelpText>To be replaced with new Cloud mappings soon.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>R&amp;D Products</fullName>
            </value>
            <value>
                <fullName>Tech Ops</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>