force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Domain__c.field-meta.xml
<CustomField>
    <fullName>agf__Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Cloud__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Appstore</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Common Services</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Identity / Security</fullName>
            </value>
            <value>
                <fullName>InfoSec</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Programmable Data Center</fullName>
            </value>
            <value>
                <fullName>Reliability</fullName>
            </value>
            <value>
                <fullName>Sales Department</fullName>
            </value>
            <value>
                <fullName>Service Department</fullName>
            </value>
            <value>
                <fullName>T&amp;P Ops</fullName>
            </value>
            <value>
                <fullName>Test Health</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Trust &amp; Productivity</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>