force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Exclude_Capacity_Reports__c.field-meta.xml
<CustomField>
    <fullName>agf__Exclude_Capacity_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value used to exclude team from IT Reports</description>
    <label>Exclude from IT Capacity Reports</label>
    <type>Checkbox</type>
</CustomField>