force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__External_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__External_Name__c</fullName>
    <externalId>true</externalId>
    <label>External Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>