force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Group_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Group_ID_Link__c</fullName>
    <formula>IF( ISBLANK(agf__Team_Email_Group_ID__c) , &apos;&apos;, HYPERLINK(&apos;/setup/own/groupdetail.jsp?id=&apos;+agf__Team_Email_Group_ID__c+&apos;&amp;setupid=PublicGroups&apos;, agf__Team_Email_Group_ID__c))</formula>
    <label>Group ID Link</label>
    <type>Text</type>
</CustomField>