force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Include_Lightning_Platform_Freeze__c.field-meta.xml
<CustomField>
    <fullName>agf__Include_Lightning_Platform_Freeze__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Lightning Platform Freeze records should be included for releases. This is in addition to Feature Freeze and Release Freeze records.</description>
    <inlineHelpText>Check this box if Lightning Platform Freeze records should be included for releases. This is in addition to Feature Freeze and Release Freeze records.</inlineHelpText>
    <label>Include Lightning Platform Freeze</label>
    <type>Checkbox</type>
</CustomField>