force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Kanban__c.field-meta.xml
<CustomField>
    <fullName>agf__Kanban__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kanban</label>
    <type>Checkbox</type>
</CustomField>