force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Lock_Report__c.field-meta.xml
<CustomField>
    <fullName>agf__Lock_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://build2.soma.salesforce.com/luna2/gatekeeperreport.faces?teamid=&apos; +  Id , &apos;Gatekeeper&apos; )</formula>
    <label>Lock Report</label>
    <type>Text</type>
</CustomField>