force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Number_of_new_org62_Cases__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_new_org62_Cases__c</fullName>
    <description>Number of new org62 customer cases added</description>
    <label>Number of new org62 Cases</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>