force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Parent_Cloud__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Cloud__c</fullName>
    <formula>agf__Cloud_LU__r.agf__Parent_Cloud__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Cloud</label>
    <type>Text</type>
</CustomField>