force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__PO_Certified__c.field-meta.xml
<CustomField>
    <fullName>agf__PO_Certified__c</fullName>
    <description>Is Product Owner certified?</description>
    <formula>agf__Product_Owner__r.agf__Certified_Product_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Product Owner certified?</inlineHelpText>
    <label>PO Certified</label>
    <type>Checkbox</type>
</CustomField>