force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Prefer_Board_Column_Auto_Update__c.field-meta.xml
<CustomField>
    <fullName>agf__Prefer_Board_Column_Auto_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If team checks this - Work status update will update Board column on the Sprint Virtual wall and Kanban Columns will not be updated automatically.</description>
    <inlineHelpText>If team checks this - Work status update will update Board column on the Sprint Virtual wall and Kanban Columns will not be updated automatically.</inlineHelpText>
    <label>Prefer Board Column Auto Update</label>
    <type>Checkbox</type>
</CustomField>