force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Product_Area__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core - Architecture</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>CSS - Knowledge Base</fullName>
            </value>
            <value>
                <fullName>Ideas</fullName>
            </value>
            <value>
                <fullName>Partner Networks</fullName>
            </value>
            <value>
                <fullName>Platform - Administration &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>Platform - Analytics</fullName>
            </value>
            <value>
                <fullName>Platform - AppExchange</fullName>
            </value>
            <value>
                <fullName>Platform - Application Development</fullName>
            </value>
            <value>
                <fullName>Platform - Application Services</fullName>
            </value>
            <value>
                <fullName>Platform - Appstore</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Platform - Other</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>AppStore Edition</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
            <value>
                <fullName>Email Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>