force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Line__c</fullName>
    <inlineHelpText>To be replaced with new Cloud mappings soon.</inlineHelpText>
    <label>Product Line TO BE DELETED</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>App Lifecycle, ISV, Admin</fullName>
            </value>
            <value>
                <fullName>Appstore</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Enterprise Scale</fullName>
            </value>
            <value>
                <fullName>Ideas</fullName>
            </value>
            <value>
                <fullName>InfoSec</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Service Department</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Usability &amp; App Development</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Verticals</fullName>
            </value>
            <value>
                <fullName>www</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>