force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Release_Coverage_Needed__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Coverage_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether team needs to participate in release coverage</description>
    <label>Release Coverage Needed</label>
    <type>Checkbox</type>
</CustomField>