force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Scrum_Master__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Master</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scrum_Master_For_Team</relationshipName>
    <type>Lookup</type>
</CustomField>