force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Scrum_Meeting_Time_Location__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Meeting_Time_Location__c</fullName>
    <inlineHelpText>The time and location of the team&apos;s scrum meeting. Include dial-in #, if applicable.</inlineHelpText>
    <label>Scrum Meeting Time/Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>