force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Scrum_Team_Domain__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team_Domain__c</fullName>
    <description>Describes what the team owns (functionality, infrastructure, services, etc.)</description>
    <inlineHelpText>Describes what the team owns (functionality, infrastructure, services, etc.)</inlineHelpText>
    <label>Scrum Team Domain</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>