force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__SM_Certified__c.field-meta.xml
<CustomField>
    <fullName>agf__SM_Certified__c</fullName>
    <description>Is ScrumMaster certified?</description>
    <formula>agf__Scrum_Master__r.agf__Certified_Scrum_Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is ScrumMaster certified?</inlineHelpText>
    <label>SM Certified</label>
    <type>Checkbox</type>
</CustomField>