force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__SM_more_than_one_team__c.field-meta.xml
<CustomField>
    <fullName>agf__SM_more_than_one_team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SM more than one team</label>
    <type>Checkbox</type>
</CustomField>