force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>