force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Status_Change_Notify__c.field-meta.xml
<CustomField>
    <fullName>agf__Status_Change_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Change Notify</label>
    <type>Checkbox</type>
</CustomField>