force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Status_Report_Format__c.field-meta.xml
<CustomField>
    <fullName>agf__Status_Report_Format__c</fullName>
    <defaultValue>IF ( $RecordType.Name = &quot;Program Team&quot;,&quot;decisions risks blockers milestones participants&quot;, &quot;decisions risks blockers&quot;)</defaultValue>
    <inlineHelpText>For Status reports for this team, allows you to specify the sections that should be displayed in that report and the order they should be displayed in. Use a space to separate each section. May include: decisions risks blockers milestones participants</inlineHelpText>
    <label>Status Report Sections</label>
    <length>200</length>
    <type>Text</type>
</CustomField>