force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Story_Point_Scale__c.field-meta.xml
<CustomField>
    <fullName>agf__Story_Point_Scale__c</fullName>
    <defaultValue>&quot;1,2,3,5,8,13,21&quot;</defaultValue>
    <inlineHelpText>Enter the story point scale your team uses. This field must be a number comma separated list. By default it will be Fibonacci sequence through 21.</inlineHelpText>
    <label>Story Point Scale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>