force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Team_Home_Page__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Home_Page__c</fullName>
    <description>A link to the team&apos;s home page.  For example their Google Site, Chatter Group or alternative resource where users can find more information about this team.</description>
    <inlineHelpText>Enter the URL for your team&apos;s main site (Google, GitHub, etc). If you don&apos;t have a site, enter the URL for your team&apos;s primary Chatter group.</inlineHelpText>
    <label>Team Homepage</label>
    <type>Url</type>
</CustomField>