force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Queue__c</fullName>
    <formula>HYPERLINK(&quot;p/own/Queue/d?id=&quot; &amp; agf__Team_Queue_ID__c , Name &amp; &quot; Scrum Team&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Queue</label>
    <type>Text</type>
</CustomField>