force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Team_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Queue_ID__c</fullName>
    <label>Team Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>