force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Team_Size__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Size__c</fullName>
    <label>Team Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>