force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Tenure_on_team__c.field-meta.xml
<CustomField>
    <fullName>agf__Tenure_on_team__c</fullName>
    <label>One year tenure on team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>