force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Total_Dev_with_Allocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Dev_with_Allocation__c</fullName>
    <formula>agf__Total_Dev_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dev with Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>