force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Total_Member_Allocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Member_Allocation__c</fullName>
    <label>Total Member Allocation</label>
    <summarizedField>agf__ADM_Scrum_Team_Member__c.agf__Allocation__c</summarizedField>
    <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>