force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Total_Members__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Members__c</fullName>
    <label>Total Members</label>
    <summaryForeignKey>agf__ADM_Scrum_Team_Member__c.agf__Scrum_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>